log
Fri 21 Apr 2023 01:09:22 PM UTC: 
 treemap.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
11b9df2
Fri 21 Apr 2023 01:24:47 PM UTC: 
 treemap.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:96:5: error: expected expression before ‘}’ token
   96 |     }
      |     ^
treemap.c:96:5: error: expected expression before ‘}’ token
Compilation failed
f15902b
